k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: apm-project-service

spec:
  selector:
    app: apm-project

  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

  type: NodePort
